# laptop2studio

./: README.md
learnOpenCV/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  learnOpenCV  learnOpenCV.cbp  main.cpp
learnOpenCV/HighGui/: HighGui.cpp  HighGui.hpp
learnOpenCV/resource/FirstTest/: ReadAndVideo.hpp  blur.hpp  canny.hpp  erode.hpp
learnOpenCV/resource/mouseoperation/: mouseoperation.cpp
learnOpenCV/resource/sliderbar/: sliderbar.cpp
